# rust-callgraph

./: .gitignore  Cargo.toml  LICENSE  Readme.org  rust-toolchain.toml
example_code/: Cargo.toml  fun_method.rs
example_code/src/: fun_method.rs  main.rs
src/: lib.rs  main.rs  visitor.rs
